# receipt-ocr

./: .firebaserc  .gitignore  README.md  firebase.json  firestore.indexes.json  firestore.rules  gradlew  pyproject.toml  settings.gradle.kts
android-app/: build.gradle.kts
config/: config.example.json
decision/: ADR-0001.md  ADR-0002.md  ADR-0003.md  ADR-0004.md  ADR-0005.md
deploy/oci/: cloud-init-poc.sh  config.example.env  config.poc.example.json  receipt-ocr-llm-health.service  receipt-ocr-llm-health.timer  receipt-ocr-llm.service  receipt-ocr-llm.timer  receipt-ocr-poc.service  receipt-ocr-poc.timer
docs/: 2026-06-15_01_INITIAL_HANDOFF.md  2026-06-15_02_HANDOFF.md  2026-06-15_HANDOFF.md  2026-06-28_01_CURRENT_STATUS.md  2026-06-28_02_OCR_COMPARISON.md  2026-06-28_CURRENT_STATUS.md  ANDROID_APP_SETUP.md  ANDROID_UPLOAD.md  FIREBASE_GUIDE.md  FIREBASE_SETUP.md  GOOGLE_DRIVE_DESKTOP.md  HANDOFF.md  OCI_POC_SETUP.md  OCI_POC_WORKER_ACTIVATION.md  OCI_VM_VERIFICATION.md
docs/billing/: 2026-07-20_billing-status.md
docs/design/: 2026-07-12_codex_cli_receipt_parser_design.md
docs/handover/: 2026-07-12_01_llm_receipt_parser_design.md  (+4 more)
schema/: receipt-llm-result-v1.json
scripts/: ocr_macos.swift
tests/: test_cloud.py  test_cloud_worker.py  test_drive_api_client.py  test_drive_client.py  test_firestore_writer.py  test_llm_contract.py  test_llm_spool.py  test_llm_worker.py  test_parser.py  test_reconciliation.py  test_review_server.py  test_source_metadata.py  test_vision_client.py
web-app/: .env.example  index.html  package-lock.json  package.json
(+54 files in other folders)
